--- a/specification aggregator.ipynb
+++ b/specification aggregator.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,18 +547,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True ['profile_list.txt', 'draft_profile_list.txt', 'type_list.txt', 'draft_type_list.txt', 'deprecated.txt']\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dct', 'bioschemastypes']\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemas', 'dwc', 'dct']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
-      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dct', 'bioschemastypesdrafts']\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemasdrafts', 'ppeo', 'dct', 'rdf', 'dwc']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
-      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemasdrafts', 'dct', 'rdf']\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemastypes', 'dct']\n",
+      "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemastypesdrafts', 'dct']\n",
+      "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n",
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['bioschemasdrafts', 'rdf', 'dct']\n",
       "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n"
      ]
     }
@@ -720,6 +731,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gtsueng\\Anaconda3\\envs\\outbreak\\lib\\site-packages\\biothings_schema\\schema.py:280: UserWarning: Found multiple namespace prefixes defined in the schema: f['dct', 'dwc', 'bioschemas']\n",
+      "  warnings.warn(f\"Found multiple namespace prefixes defined in the schema: f{namespace_set}\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from biothings_schema import Schema\n",
+    "\n",
+    "script_path = ''\n",
+    "#url = \"https://raw.githubusercontent.com/gtsueng/DDE_bioschemas/main/draft_validations/ProteinStructure_v0.5-DRAFT-2018_08_15.json\"\n",
+    "url = \"https://raw.githubusercontent.com/BioSchemas/bioschemas-dde/main/bioschemas.json\"\n",
+    "#bioschemasfile = os.path.join(script_path,'bioschemas.json')\n",
+    "#with open(bioschemasfile,'r') as infile:\n",
+    "#    url = json.load(infile)\n",
+    "\n",
+    "sc = Schema(url)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -734,16 +773,8 @@
     "\n",
     "sc = Schema(url, base_schema=[\"schema.org\",\"bioschemastypes\",\"bioschemas\",\n",
     "                              \"bioschemasdrafts\",\"bioschemastypesdrafts\",\n",
-    "                              \"bioschemasdeprecated\"])\n",
-    "\n"
+    "                              \"bioschemasdeprecated\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
